# organo

./: .gitignore  README.md  pyproject.toml
src/organo/configs/: dataloader.py
src/organo/data/configs/: dataloader.py
