[project]
name = "organo"
version = "0.1.1a1"
description = ""
authors = [
    {name = "migo",email = "1695587905@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "typer",
    "pandas",
    "scipy",
    "tqdm",
    "wandb",
    "phx-class-registry",
    "datasets",
    "aiohttp",
    "yarl",
    "fsspec",
    "s3fs",
    "hydra-core",
    "omegaconf",
]

[tool.poetry]
packages = [{include = "organo", from = "src"}]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.dependencies.torch]]
source = "pytorch-cpu"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
